# Caloru

./: .ansible-lint  .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  justfile  load_test_data.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.sh
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
.github/linters/: .ansible-lint.yml
.github/workflows/: api.yml  ci.yml  deploy.yml
ansible/: ansible.cfg  deploy_app.yml  hosts.yml  setup_webserver.yml  vm_setup.yml
ansible/inventory/: local_vm.yml  oracle_cloud.yml
api/: .gitignore  Dockerfile
api/.devcontainer/: .env  Dockerfile  devcontainer.json
api/caloru/accounts/: views.py
api/caloru/caloru/: pagination.py
api/caloru/foods/: serializers.py  views.py
api/caloru/templates/: base.html
api/scripts/: load_test_data.sh  mock_data_converter.py
caloru/: manage.py  run.sh
caloru/accounts/: forms.py  urls.py
caloru/caloru/: asgi.py  settings.py  urls.py  wsgi.py
caloru/foods/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
caloru/foods/fixtures/: consumed_products.yaml  products.yaml  users.yaml
caloru/foods/migrations/: 0001_initial.py  0003_auto_20230921_1438.py  (+4 more)
caloru/foods_old/: apps.py  serializers.py  urls.py  views.py
caloru/products/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
caloru/static/: style.css
caloru/templates/: base.html  history.html  home.html  tracker.html
docs/: caloru_arch.drawio  dev_notes.md
view/caloru-web/: index.html  package-lock.json  package.json
(+47 files in other folders)
